Text overflow fix

--- a/kasa-project/src/styles/components/DropdownStyles.scss
+++ b/kasa-project/src/styles/components/DropdownStyles.scss
@@ -48,6 +48,8 @@
     overflow: hidden;
     transition: all 0.6s ease;
     height: 10vh;
+    width: 77vw;
+
     z-index: -1;
     p{
         font-family: $font-primary;
